--- a/web/templates/add_client.html
+++ b/web/templates/add_client.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div class="card">
-    <h2><i data-lucide="plus" style="color: #1F8F74; width: 28px; height: 28px; vertical-align: -4px; margin-right: 0.5rem;"></i>Add New Client</h2>
+    <h2><i data-lucide="plus" class="page-icon"></i>Add New Client</h2>
     <p class="page-subtitle">Create a new client record</p>
     
     <form method="post" data-file-number-format="{{ file_number_format }}">
