--- a/web/templates/add_edit_type.html
+++ b/web/templates/add_edit_type.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <div class="card">
-    <h2><i data-lucide="tag" style="color: #1F8F74; width: 28px; height: 28px; vertical-align: -4px; margin-right: 0.5rem;"></i>{{ 'Edit' if type else 'Add' }} Client Type</h2>
+    <h2><i data-lucide="tag" class="page-icon"></i>{{ 'Edit' if type else 'Add' }} Client Type</h2>
     <p class="page-subtitle">Client types are for filtering and organizing your client list</p>
 
     {% if error %}
