--- a/web/templates/manage_types.html
+++ b/web/templates/manage_types.html
@@ -10,7 +10,7 @@
 <div class="card types-page">
     <div class="header-row">
         <div>
-            <h2><i data-lucide="tag" style="color: #1F8F74; width: 28px; height: 28px; vertical-align: -4px; margin-right: 0.5rem;"></i>Manage Client Types</h2>
+            <h2><i data-lucide="tag" class="page-icon"></i>Manage Client Types</h2>
             <p class="page-subtitle">Manage client types for filtering and organization</p>
         </div>
         <a href="{{ url_for('types.add_type') }}" class="btn-add">Add Type</a>
