--- a/web/templates/outstanding_statements.html
+++ b/web/templates/outstanding_statements.html
@@ -17,7 +17,7 @@
     <!-- Header -->
     <div class="statements-header">
         <div>
-            <h2><i data-lucide="file-text" style="color: #1F8F74; width: 28px; height: 28px; vertical-align: -4px; margin-right: 0.5rem;"></i>Outstanding Statements</h2>
+            <h2><i data-lucide="file-text" class="page-icon"></i>Outstanding Statements</h2>
             <p>Generate and track client statements</p>
         </div>
         <a href="{{ url_for('clients.index') }}" class="btn">
