--- a/web/templates/add_edit_link_group.html
+++ b/web/templates/add_edit_link_group.html
@@ -10,7 +10,7 @@
 <div class="card">
     <div class="header-row">
         <div>
-            <h2><i data-lucide="link" style="color: #1F8F74; width: 28px; height: 28px; vertical-align: -4px; margin-right: 0.5rem;"></i>{% if group %}Edit{% else %}New{% endif %} Link</h2>
+            <h2><i data-lucide="link" class="page-icon"></i>{% if group %}Edit{% else %}New{% endif %} Link</h2>
             <p class="page-subtitle">Link clients for couples, family, or group therapy</p>
         </div>
     </div>
