Fix: Use currency setting for Unbilled This Month display

--- a/web/templates/main_view.html
+++ b/web/templates/main_view.html
@@ -27,7 +27,7 @@
         <div class="stat-label">Pending Invoices</div>
     </div>
     <div class="stat-card mint" draggable="true" data-card-id="billable-month">
-        <div class="stat-number">${{ "%.2f"|format(billable_this_month|default(0)) }}</div>
+        <div class="stat-number">{{ currency|currency_symbol }}{{ "%.2f"|format(billable_this_month|default(0)) }}</div>
         <div class="stat-label">Unbilled This Month</div>
     </div>
     <div class="stat-card peach" draggable="true" data-card-id="current-time">
